Fixed layout bug on console page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@
 
 #container {
 	min-height: 100%;
+	min-width: 100%;
 	position: relative;
 	margin: 0px;
 	padding: 0px;
@@ -27,6 +28,7 @@ div.body {
 	padding: 10px;
 	padding-top: 50px;
 	padding-bottom: 150px;
+	width: 100%;
 	z-index: 1;
 	position: relative;
 }
